Add manual activity post api design & make goagen
